Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes in current subversion repository (svn)
==============================================
 o C++ client library:
	- #12799 Added leaveServer(), still buggy under certain mutli threading states

 o C client library:
   - #12781 Added missing pthread_cond_destroy() and pthread_mutex_destroy()
   - #12777 Memory leak fix for Udp return
   - #12778 Memory leak fix for calling connect() multiple times

 o #12772-#12774 Added workaround for ActiveX bridge to transfer byte[]
   See: http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4887461
   See: http://www.xmlblaster.org/xmlBlaster/doc/requirements/client.activex.html

Changes for 1.RC1 [2004-10-28] #12758
=====================================

 o #12706,#12709 Added subversion revision number as exception text prefix, for example
     ex.getMessage()="#12702 Can't load your plugin"

 o #12703 Upgraded ANT from version 1.6.1 to version 1.6.2

 o #12696 Added org.xmlBlaster.engine.DeadMessageDumper plugin to dump
   dead messages to hard disk, supports republishing (see javadoc)

 o #12689,#12690 Added '__deadMessageReason' ClientProperty to dead messages

 o #12685,#12686 New server flag -xmlBlaster/acceptWrongSenderAddress/<subjectId>  true/false [false]
   -xmlBlaster/acceptWrongSenderAddress/joe true
    Allows user 'joe' to send a wrong sender address in PublishQos
    Useful to resend dead messages with 'javaclients.script.XmlScript'

 o #12681 Checking subscription handle to be null to avoid IllegalArgumentException
   Thanks to aaron@mindwidgets.com

 o #12665 Java client library: fail safe mode
   Remember public and secret sessionId on client side for reconnect attempts
   (For future enhancement of pubSessionId<0 and persistent sessions)

 o #12664 Java client library: BUGFIX get() and async mode
   Catching get() requests in async mode and throw an exception
